<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".Home">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <GridLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    android:rowCount="4">

                <TextView
                        android:layout_column="0"
                        android:layout_row="0"
                        android:id="@+id/UsernameAccount"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <androidx.cardview.widget.CardView
                        android:layout_column="0"
                        android:layout_row="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/colorPrimaryLight">

                    <GridLayout
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_gravity="center"
                            android:columnCount="2"
                            android:rowCount="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:layout_column="0"
                                android:layout_row="0"
                                android:text="@string/saldo"
                                android:layout_columnWeight="1"
                                android:textColor="@color/textPrimary" />

                        <TextView
                                android:id="@+id/Balance"
                                android:gravity="end"
                                android:layout_column="1"
                                android:layout_row="0"
                                android:text="@string/idr"
                                android:layout_columnWeight="1"
                                android:textColor="@color/textPrimary" />

                    </GridLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_column="0"
                        android:layout_row="2"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/colorPrimaryLight">

                    <GridLayout
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_gravity="center"
                            android:columnCount="2"
                            android:rowCount="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:layout_column="0"
                                android:layout_row="0"
                                android:text="@string/bonus"
                                android:layout_columnWeight="1"
                                android:textColor="@color/textPrimary" />

                        <TextView
                                android:id="@+id/BalanceBonus"
                                android:gravity="end"
                                android:layout_column="1"
                                android:layout_row="0"
                                android:text="@string/idr"
                                android:layout_columnWeight="1"
                                android:textColor="@color/textPrimary" />

                    </GridLayout>

                </androidx.cardview.widget.CardView>

                <Button
                        android:id="@+id/Reload"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_replay_black"
                        android:foregroundTint="@color/Info" />

            </GridLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/CheckStup"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_assignment_turned_in_black"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/check_stup"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/SealBroken"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_broken_image_black"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/seal_broken"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/EmptyStup"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_assignment_late_black"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/empty_stup"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/BuyBack"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_local_atm"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/buy_back"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/SendBee"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_local_shipping"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/sell_stup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>