<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".SendBee">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/saldo"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/Balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/saldo"
                    android:textSize="20sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <FrameLayout
                    android:id="@+id/QR"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="5dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="20dp">

            <LinearLayout
                    android:id="@+id/listQRCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/validateStup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/Primary"
                android:text="@string/cek_qr"
                android:textColor="@color/textSecondary" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/Camera"
                    android:layout_width="280dp"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/image_from_agent"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />

            <Button
                    android:id="@+id/TakeCamera"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/Link"
                    android:foreground="@drawable/ic_photo_camera"
                    android:foregroundTint="@color/Primary" />

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="10dp">

                <Spinner
                        android:id="@+id/listUser"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp" />

            </androidx.cardview.widget.CardView>

            <Button
                    android:id="@+id/sendDataBee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@color/Primary"
                    android:text="@string/sell_stup"
                    android:textColor="@color/textSecondary" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>