<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Menu">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/AddClient"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_person_add_black"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/add_member"
                        android:textColor="@color/textPrimary"
                        android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/RequestDeposit"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_fiber_smart_record"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/request_deposit"
                        android:textColor="@color/textPrimary"
                        android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/UserList"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_group_black"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/list_user"
                        android:textColor="@color/textPrimary"
                        android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/HistoryWithdraw"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_history_black"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/history_withdraw"
                        android:textColor="@color/textPrimary"
                        android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/Testimonies"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="10dp"
                        android:background="@color/Link"
                        android:foreground="@drawable/ic_record_voice_over"
                        android:foregroundTint="@color/Warning" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/testimonies"
                        android:textColor="@color/textPrimary"
                        android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>